[tool.poetry]
name = "kelvin-s_twitter_username_updater"
version = "0.1.0"
description = ""
authors = ["kelvin"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py37"

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[[tool.pysen.lint.source]]
  excludes = [".venv"]